fixed all sonar lint